Test Angular-based theme

--- a/src/data/translations/en/settings.json
+++ b/src/data/translations/en/settings.json
@@ -269,7 +269,7 @@
 				"options" : {
 					"choices" : [
 						[ "default", "Default" ],
-						[ "dark", "Dark" ]
+						[ "angular", "Angular" ]
 					]
 				}
 			},
